Fixed overflow-wrap mixin from causing double dcrollbars in Firefox

--- a/mixins.less
+++ b/mixins.less
@@ -103,7 +103,7 @@
 	.overflow-wrap( @width: @gridRowWidth ) {
 		width: 100%;
 		min-height: 100%;
-		overflow-x: hidden;
+		overflow: hidden;
 
 		@media all and ( max-width: @width ) {
 			width: @width;
